<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <RelativeLayout
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@null" >

        <TextView
            android:id="@+id/txtTitle_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txtRegister_title"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/layout_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:visibility="visible" >

            <ImageView
                android:id="@+id/back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="5dp"
                android:src="@drawable/arrow_left_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@id/back"
                android:text="@string/txtBack"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_phontoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_title"
        android:layout_marginTop="10dp" >

        <com.sevele.ds.view.CircleImageView
            android:id="@+id/user_phonto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:src="@drawable/all_avatar_user_default" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_phontoLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp" >

            <TextView
                android:id="@+id/user_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/user_count"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/regist_inputcount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/user_count"
                android:background="@null"
                android:hint="@string/user_count_hint"
                android:textColor="@color/frenchgreen"
                android:textColorHint="@color/white" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/user_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/user_pwd"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/regist_inputpwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/user_pwd"
                android:background="@null"
                android:hint="@string/user_pwd_hint"
                android:textColor="@color/frenchgreen"
                android:textColorHint="@color/white" 
                android:inputType="textPassword"/>
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/user_name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/regist_inputname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/user_name"
                android:background="@null"
                android:hint="@string/user_name_hint"
                android:textColor="@color/frenchgreen"
                android:textColorHint="@color/white" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/user_yearsold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/user_yearsold"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/yearsold_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/user_yearsold"
                android:background="@null"
                android:hint="@string/user_yearsold_hint"
                android:textColor="@color/frenchgreen"
                android:textColorHint="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/regist_genderlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/regist_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/user_gender"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/regist_gender"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/man"
                    style="@style/CustomRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:drawableRight="@drawable/boy" />

                <RadioButton
                    android:id="@+id/gril"
                    style="@style/CustomRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/girl" />
            </RadioGroup>
        </RelativeLayout>

        <Button
            android:id="@+id/regist_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:alpha="0.7"
            android:background="@drawable/btn_login_selector"
            android:gravity="center"
            android:text="@string/user_regist_sure"
            android:textColor="@color/sora"
            android:textSize="25sp" />
    </LinearLayout>

</RelativeLayout>