<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <ImageView
        android:id="@+id/imgView_user01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:scaleType="center"
        android:src="@drawable/icon_user" />
    <ImageView
        android:id="@+id/imgView_user02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imgView_user01"
        android:scaleType="center"
        android:src="@drawable/icon_user02" />

    <LinearLayout
        android:id="@+id/linear_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgView_user02"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_username" />

        <com.sevele.ds.view.EditTextWithDel
            android:id="@+id/edtTxt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/edittext_line_white"
            android:hint="@string/username_hint"
            android:padding="7dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" >
        </com.sevele.ds.view.EditTextWithDel>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_username"
        android:layout_margin="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_password" />

        <com.sevele.ds.view.EditTextWithDel
            android:id="@+id/edtTxt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/edittext_line_white"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="7dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_password"
        android:layout_margin="15dp"
        android:text="@string/do_login"
        android:textSize="25sp"
        android:textColor="@color/sora"
        android:background="@drawable/btn_login_selector"
        android:alpha="0.7"/>

   

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>